Add NetEase Cloud Music playlist cover.